rotation preveiw main not showing correct

--- a/frontend/src/components/plusMenu/style.css
+++ b/frontend/src/components/plusMenu/style.css
@@ -109,6 +109,7 @@
   width: 100%;
   height: 230px;
   border: 1px solid #000;
+  overflow: hidden;
 }
 
 .photo_preview_main img.zoomed-in {
@@ -121,6 +122,10 @@
   width: auto; /* allow the width to adjust based on aspect ratio */
   height: auto; /* allow the height to adjust based on aspect ratio */
   object-fit: contain; /* resize the image to cover the container without distortion */
+}
+.nonInteractiveImage {
+  user-select: none; /* Prevents the image from being selectable */
+  pointer-events: none; /* Makes the image non-clickable and non-responsive to hover */
 }
 
 .photo_preview_main img:hover {
