--- a/frontend/src/components/styleOptions/Rotate.css
+++ b/frontend/src/components/styleOptions/Rotate.css
@@ -18,8 +18,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  top: 110px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 500px;
   height: 450px;
   object-fit: contain;
